--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource/inter";
+import "@fontsource-variable/inter";
 
 interface Props {
   title: string;
@@ -21,9 +21,9 @@ const { title } = Astro.props;
   <body>
     <slot />
   </body>
+  <style>
+    html {
+      font-family: "Inter Variable", sans-serif;
+    }
+  </style>
 </html>
-<style>
-  html {
-    font-family: "Inter Variable", sans-serif;
-  }
-</style>
