feat: create achievements section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../sections/Header.astro";
 import About from "../sections/About.astro";
 import Activities from "../sections/Activities.astro";
+import Achievements from "../sections/Achievements.astro";
 ---
 
 <Layout title="Coding Aracati">
@@ -11,5 +12,6 @@ import Activities from "../sections/Activities.astro";
     <Header />
     <About />
     <Activities />
+    <Achievements />
   </main>
 </Layout>
