--- a/src/sections/Activities.astro
+++ b/src/sections/Activities.astro
@@ -35,7 +35,7 @@ const acvities = [
     práticas intensivas, há algo para todos. Conecte-se, aprenda e descubra em
     nossa vibrante comunidade.
   </h2>
-  <div class="flex flex-row w-full max-w-7xl justify-around">
+  <div class="flex flex-row w-full max-w-6xl justify-between">
     {
       acvities.map(({ Icon, title, description }) => (
         <ActivityCard Icon={Icon} title={title} description={description} />
