--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -8,7 +8,11 @@ import Button from "../components/Button";
 >
   <div class="flex flex-row items-center">
     <Logo size={48} />
-    <h1 class="text-primary font-medium text-lg ml-1">Coding Aracati</h1>
+    <h1 class="text-primary font-medium text-lg ml-1">
+      Coding Aracati
+    </h1>
   </div>
-  <Button client:load onClick={() => {}}>Entrar na comunidade</Button>
+  <Button client:load onClick={() => {}}>
+    Entrar na comunidade
+  </Button>
 </header>
