--- a/src/sections/About.astro
+++ b/src/sections/About.astro
@@ -4,21 +4,23 @@ import Button from "../components/Button";
 import Logo from "../assets/Logo";
 ---
 
-<div class="flex flex-row px-36 py-24 items-center justify-center bg-gray-100">
-  <div class="flex flex-col flex-1 w-max">
-    <h1 class="text-primary text-6xl font-semibold mb-4">Coding Aracati</h1>
-    <span class="text-secondary mb-8 text-base font-normal max-w-3xl">
-      A comunidade de Coding Aracati é um grupo unido de entusiastas da
-      tecnologia empenhados em aprender, colaborar e inovar. Formado por
-      programadores de todas as áreas, o grupo realiza workshops e eventos
-      educacionais para compartilhar conhecimentos e promover a aprendizagem
-      contínua. Além disso, desempenhamos um papel importante no desenvolvimento
-      tecnológico da região, inspirando jovens a seguir carreiras em de
-      tecnologia.
-    </span>
-    <div>
-      <Button onClick={() => {}}> Entrar na comunidade </Button>
+<div class="flex justify-center px-36 py-24 bg-gray-100">
+  <div class="flex flex-row items-center justify-between w-full max-w-6xl">
+    <div class="flex flex-col w-full">
+      <h1 class="text-primary text-6xl font-semibold mb-4">Coding Aracati</h1>
+      <span class="text-secondary mb-8 text-base font-normal max-w-3xl">
+        A comunidade de Coding Aracati é um grupo unido de entusiastas da
+        tecnologia empenhados em aprender, colaborar e inovar. Formado por
+        programadores de todas as áreas, o grupo realiza workshops e eventos
+        educacionais para compartilhar conhecimentos e promover a aprendizagem
+        contínua. Além disso, desempenhamos um papel importante no
+        desenvolvimento tecnológico da região, inspirando jovens a seguir
+        carreiras em de tecnologia.
+      </span>
+      <div>
+        <Button onClick={() => {}}> Entrar na comunidade </Button>
+      </div>
     </div>
+    <Logo size={400} />
   </div>
-  <Logo size={400} />
 </div>
