feat: create events section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Header from "../sections/Header.astro";
 import About from "../sections/About.astro";
 import Activities from "../sections/Activities.astro";
 import Achievements from "../sections/Achievements.astro";
+import Events from "../sections/Events.astro";
 ---
 
 <Layout title="Coding Aracati">
@@ -13,5 +14,6 @@ import Achievements from "../sections/Achievements.astro";
     <About />
     <Activities />
     <Achievements />
+    <Events />
   </main>
 </Layout>
