--- a/src/sections/Achievements.astro
+++ b/src/sections/Achievements.astro
@@ -41,7 +41,7 @@ const achievements = [
     <div class="grid grid-cols-2 gap-4">
       {
         achievements.map(({ Icon, title, value }) => (
-          <div class="flex flex-row">
+          <div class="flex flex-row items-center">
             <Icon className="text-primary mr-4" size={48} />
             <div>
               <h1 class="text-primary text-3xl font-bold">{value}</h1>
