feat: create footer section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import About from "../sections/About.astro";
 import Activities from "../sections/Activities.astro";
 import Achievements from "../sections/Achievements.astro";
 import Events from "../sections/Events.astro";
+import Footer from "../sections/Footer.astro";
 ---
 
 <Layout title="Coding Aracati">
@@ -15,5 +16,6 @@ import Events from "../sections/Events.astro";
     <Activities />
     <Achievements />
     <Events />
+    <Footer />
   </main>
 </Layout>
