--- a/src/sections/Events.astro
+++ b/src/sections/Events.astro
@@ -15,16 +15,16 @@ const events = [
 ];
 ---
 
-<div class="py-10 px-36 flex flex-col items-center">
+<div class="py-10 px-36 md:px-12 max-sm:px-12 flex flex-col items-center">
   <h1 class="text-primary font-semibold text-4xl text-center mb-4">
     Eventos recentes
   </h1>
-  <div class="grid grid-cols-2 gap-6">
+  <div class="grid grid-cols-2 max-sm:grid-cols-1 gap-6">
     {
       events.map(({ title, description, image }) => (
-        <div class="w-full flex flex-col items-center mb-4 overflow-hidden rounded-lg max-w-sm">
+        <div class="flex flex-col items-center mb-4 overflow-hidden rounded-lg max-w-sm">
           <img src={image} alt={title} class="w-full h-96 object-cover" />
-          <div class="bg-gray-100 w-full text-center p-4">
+          <div class="bg-gray-100 flex-1 w-full text-center p-4">
             <h1 class="text-primary font-semibold text-2xl mt-2 ">{title}</h1>
             <span class="text-secondary">{description}</span>
           </div>
