--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -8,11 +8,9 @@ import Button from "../components/Button";
 >
   <div class="flex flex-row items-center">
     <Logo size={48} />
-    <h1 class="text-primary font-medium text-lg ml-1">
+    <h1 class="text-primary font-medium text-lg max-sm:hidden ml-1">
       Coding Aracati
     </h1>
   </div>
-  <Button client:load onClick={() => {}}>
-    Entrar na comunidade
-  </Button>
+  <Button client:load>Entrar na comunidade</Button>
 </header>
