--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -23,16 +23,22 @@ const socials = [
 
 <footer>
   <div class="flex flex-col items-center bg-gray-100 p-8">
-    <h1 class="text-5xl text-primary font-semibold max-w-4xl text-center mb-8">
+    <h1
+      class="text-5xl max-sm:text-4xl text-primary font-semibold max-w-4xl text-center mb-8"
+    >
       Faça parte agora mesmo da comunidade Coding Aracati
     </h1>
-    <Button> Entrar na comunidade </Button>
+    <Button client:load>Entrar na comunidade</Button>
   </div>
-  <div class="flex justify-center bg-primary text-white py-16 px-36">
+  <div
+    class="flex justify-center bg-primary text-white py-16 px-36 md:px-12 max-sm:px-12"
+  >
     <div class="flex flex-col w-full max-w-7xl">
       <div class="flex flex-row items-center mb-10">
         <Logo size={64} color="#fff" />
-        <h1 class="text-white font-medium text-4xl ml-1">Coding Aracati</h1>
+        <h1 class="text-white font-medium text-4xl max-sm:text-2xl ml-1">
+          Coding Aracati
+        </h1>
       </div>
       <span class="text-sm font-normal mb-2">
         Copyright © 2024 Coding Aracati
