--- a/src/sections/Events.astro
+++ b/src/sections/Events.astro
@@ -1,16 +1,14 @@
 ---
 const events = [
   {
-    title: "Visita - FrontEnd CE",
-    description:
-      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.",
-    image: "https://picsum.photos/300/300",
-  },
-  {
     title: "1º Meetup Coding Aracati",
     description:
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.",
-    image: "https://picsum.photos/300/300",
+  },
+  {
+    title: "Visita - Front-end CE",
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.",
   },
 ];
 ---
@@ -21,12 +19,15 @@ const events = [
   </h1>
   <div class="grid grid-cols-2 max-sm:grid-cols-1 gap-6">
     {
-      events.map(({ title, description, image }) => (
+      events.reverse().map(({ title, description }, index) => (
         <div class="flex flex-col items-center mb-4 overflow-hidden rounded-lg max-w-sm">
-          <img src={image} alt={title} class="w-full h-96 object-cover" />
+          <img
+            src={`/landing-page/image-${events.length - index}.webp`}
+            alt={title}
+            class="w-full h-96 object-cover"
+          />
           <div class="bg-gray-100 flex-1 w-full text-center p-4">
             <h1 class="text-primary font-semibold text-2xl mt-2 ">{title}</h1>
-            <span class="text-secondary">{description}</span>
           </div>
         </div>
       ))
