--- a/src/sections/About.astro
+++ b/src/sections/About.astro
@@ -14,8 +14,8 @@ import Logo from "../assets/Logo";
         programadores de todas as áreas, o grupo realiza workshops e eventos
         educacionais para compartilhar conhecimentos e promover a aprendizagem
         contínua. Além disso, desempenhamos um papel importante no
-        desenvolvimento tecnológico da região, inspirando jovens a seguir
-        carreiras em de tecnologia.
+        desenvolvimento tecnológico da região, inspirando jovens a seguir em
+        carreiras de tecnologia.
       </span>
       <div>
         <Button onClick={() => {}}> Entrar na comunidade </Button>
